<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mobile.smartcycle.UI.BeforeActivity.RegisterActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_shape"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="10dp"
        android:hint="@string/user_account"
        android:layout_below="@+id/toolbar"
        app:met_floatingLabel="highlight"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_shape"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="10dp"
        android:hint="@string/user_nickname"
        android:layout_below="@+id/account"
        app:met_helperText="@string/nickname_helper"
        app:met_floatingLabel="highlight"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_shape"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:digits="@string/password_filter"
        android:layout_below="@+id/name"
        app:met_helperText="@string/password_helper"
        app:met_floatingLabel="highlight"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_shape"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="20dp"
        android:hint="@string/password_again"
        android:inputType="textPassword"
        android:digits="@string/password_filter"
        android:layout_below="@+id/password"
        app:met_floatingLabel="highlight"/>

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/style_button"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/password_again"
        android:text="@string/next_step"
        android:enabled="false"
        android:textColor="@drawable/style_button_text"/>

</RelativeLayout>