<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mobile.smartcycle.UI.BeforeActivity.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/app_launcher"
        android:layout_margin="40dp"
        android:layout_centerHorizontal="true"/>


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_shape"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="10dp"
        android:hint="@string/account"
        android:layout_below="@+id/logo"
        app:met_floatingLabel="highlight"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_shape"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:digits="@string/password_filter"
        android:layout_below="@+id/account"
        app:met_helperText="@string/password_helper"
        app:met_floatingLabel="highlight"/>

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/style_button"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/password"
        android:text="@string/login"
        android:enabled="false"
        android:textColor="@drawable/style_button_text"/>

    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/next"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:textColor="@color/primary_text"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newer"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:textColor="@color/primary_text"/>

</RelativeLayout>
