<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mobile.smartcycle.UI.BeforeActivity.DetailFillActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:text="@string/info_fill_hint"
        android:padding="@dimen/activity_horizontal_margin"
        android:textColor="@color/primary_text"/>

    <LinearLayout
        android:id="@+id/age_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hint_text"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_age"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="5dp"
            android:textColor="@color/primary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/user_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_birthday"
            android:textSize="18sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textColor="@color/trans_secondary_text"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/age_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_gender"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="5dp"
            android:textColor="@color/primary"
            android:textSize="12sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/male"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/male2"
                android:clickable="true"/>
            <ImageView
                android:id="@+id/female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/female1"
                android:clickable="true"/>
        </LinearLayout>

    </LinearLayout>


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/user_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_shape"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="10dp"
        android:hint="@string/user_height"
        android:layout_below="@+id/user_gender"
        android:inputType="number"
        app:met_floatingLabel="highlight"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/user_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_shape"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="20dp"
        android:hint="@string/user_weight"
        android:layout_below="@+id/user_height"
        android:inputType="number"
        app:met_floatingLabel="highlight"/>

    <LinearLayout
        android:id="@+id/level_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_weight"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_level"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="5dp"
            android:textColor="@color/primary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/user_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_level_hint"
            android:textSize="18sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textColor="@color/trans_secondary_text"/>


    </LinearLayout>

    <Button
        android:id="@+id/next_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/style_button"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/level_layout"
        android:text="@string/finish_register"
        android:enabled="false"
        android:textColor="@drawable/style_button_text"/>




</RelativeLayout>