<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_message"
        android:textSize="20sp"
        android:textColor="@color/primary_text"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_toLeftOf="@+id/cancel"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:text="@string/confirm"
        android:background="@drawable/style_list"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:clickable="true" />

    <TextView
        android:id="@+id/cancel"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:background="@drawable/style_list"
        android:layout_below="@+id/title"
        android:layout_alignParentRight="true"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:clickable="true"/>





</RelativeLayout>