<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="24dp"
    android:paddingBottom="24dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_level"
        android:textSize="20sp"
        android:textColor="@color/primary_text"
        android:gravity="center_vertical"
        android:layout_marginBottom="10dp"/>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_title">
    </ListView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/list_view"
        android:layout_alignParentRight="true">
        <TextView
            android:id="@+id/confirm"
            android:text="@string/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:background="@drawable/style_list"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="end"/>
        <TextView
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:background="@drawable/style_list"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="end"/>
    </LinearLayout>



</RelativeLayout>