<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_dialog_title"
        android:textSize="20sp"
        android:textColor="@color/primary_text"
        android:layout_marginBottom="12dp"/>

    <FrameLayout
        android:id="@+id/dialog_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_title">
        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <com.pnikosis.materialishprogress.ProgressWheel
            android:id="@+id/progress_wheel"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            custom:matProg_barColor="@color/primary"/>
    </FrameLayout>

    <TextView
        android:id="@+id/error_massage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_fragment"
        android:textColor="@color/primary_dark"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_fragment"
        android:layout_toLeftOf="@+id/cancel"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:text="@string/refresh"
        android:background="@drawable/style_list"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:clickable="true" />

    <TextView
        android:id="@+id/cancel"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:background="@drawable/style_list"
        android:layout_below="@+id/dialog_fragment"
        android:layout_alignParentRight="true"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:clickable="true"/>
</RelativeLayout>